--- a/src/components/HeaderTypography/styles.module.scss
+++ b/src/components/HeaderTypography/styles.module.scss
@@ -1,15 +1,6 @@
-.HeaderTypography {
-    // margin-bottom: 8px;
-    // text-decoration: underline #393939 4px;
-    // text-underline-offset: 6px;
-
-    
-}
-
 .centerText {
     text-align: center;
 }
-
 
 .h1 {
     font-size: 64px;
@@ -66,4 +57,8 @@
 
 .sizeLevel8 {
     font-size: 16px;
+}
+
+.addBottomMargin {
+    margin-bottom: 24px;
 }
